# Banking-Management-System

./: .gitignore  CMakeLists.txt  README.md  account.cpp  account.h  bank_system.cpp
.github/workflows/: ci.yml
assets/: account.cpp
assets/tests/: test_account.cpp  test_account.cpp.bak
